Fix header spacing

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,7 +2,7 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
